helm/charts/navidrome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - containerPort: 4533
          volumeMounts:
            - mountPath: /data
              name: navidrome-data
            - mountPath: /music
              name: navidrome-music
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music
