helm/charts/navidrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - port: 4533
