helm/charts/navidrome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
spec:
  rules:
    - host: music.koudijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
  tls:
    - secretName: music-koudijs-lan
      hosts:
        - music.koudijs.lan
